--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
-    <title>React App</title>
+    <title>Bharath Shop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
